# shader-preprocess

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  common.cpp  common.h  compress.cpp  decompress.cpp  lzma.js  macro-list.json  macro_chunk.glsl  macro_dump.txt  macro_source.txt  macros.js  math.js  pack.cpp  package-lock.json  package.json  parse.js  parser.js  pattern_matching.js  program1.cpp  program2.cpp  test.glsl
